--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello" />
-
+
     <EditText
         android:id="@+id/editText1"
         android:layout_width="157dp"
@@ -17,7 +17,7 @@
 
         <requestFocus />
     </EditText>
-
+
     <EditText
         android:id="@+id/editText2"
         android:layout_width="157dp"
@@ -27,6 +27,7 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_button" />
+        android:text="@string/buttonText" 
+        android:onClick="doTheMath"/>
 
 </LinearLayout>
